--- a/SunSync/SunSync/SyncResultPage.xaml
+++ b/SunSync/SunSync/SyncResultPage.xaml
@@ -4,7 +4,7 @@
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       mc:Ignorable="d" 
-      d:DesignHeight="560" d:DesignWidth="680" Loaded="SyncResultLoaded_EventHandler"
+      d:DesignHeight="620" d:DesignWidth="700" Loaded="SyncResultLoaded_EventHandler"
 	Title="SyncResultPage">
 
     <Grid>
@@ -23,8 +23,9 @@
         </StackPanel>
         <StackPanel Grid.Row="1" Margin="10">
             <Border BorderBrush="LightGray" BorderThickness="1">
-            <Grid Height="380" Margin="20">
+            <Grid Height="425" Margin="20">
                 <Grid.RowDefinitions>
+                    <RowDefinition Height="*"></RowDefinition>
                     <RowDefinition Height="*"></RowDefinition>
                     <RowDefinition Height="*"></RowDefinition>
                     <RowDefinition Height="*"></RowDefinition>
@@ -39,16 +40,20 @@
                     <TextBlock FontSize="16" Name="UploadFailureTextBlock2" Foreground="Gray" Margin="10" TextWrapping="Wrap">##</TextBlock>
                 </StackPanel>
                 <StackPanel Grid.Row="2">
+                    <TextBlock FontSize="20" Name="UploadSkippedTextBlock1">##</TextBlock>
+                    <TextBlock FontSize="16" Name="UploadSkippedTextBlock2" Foreground="Gray" Margin="10" TextWrapping="Wrap">##</TextBlock>
+                </StackPanel>
+                <StackPanel Grid.Row="3">
                     <TextBlock FontSize="20" Name="UploadExistsTextBlock1">##</TextBlock>
                     <TextBlock FontSize="16" Name="UploadExistsTextBlock2" Foreground="Gray" Margin="10" TextWrapping="Wrap">##</TextBlock>
                 </StackPanel>
-                <StackPanel Grid.Row="3">
+                <StackPanel Grid.Row="4">
                     <TextBlock FontSize="20" Name="UploadOverwriteTextBlock1">##</TextBlock>
                     <TextBlock FontSize="16" Name="UploadOverwriteTextBlock2" Foreground="Gray" Margin="10" TextWrapping="Wrap">##</TextBlock>
                 </StackPanel>
             </Grid>
             </Border>
-            <StackPanel  Orientation="Horizontal">
+            <StackPanel  Orientation="Horizontal" Margin="0 10">
                 <Button Content="导出日志" Width="100" Height="32" Margin="10" FontSize="14" Click="ExportLog_EventHandler"/>
                 <Button Content="返回首页" Width="100" Height="32" Margin="430 10" FontSize="14" Click="BackToHome_EventHandler"></Button>
             </StackPanel>
