add delete job function

--- a/SunSync/SunSync/QuickStartPage.xaml
+++ b/SunSync/SunSync/QuickStartPage.xaml
@@ -24,9 +24,7 @@
             <StackPanel Grid.Column="0" Orientation="Vertical">
                 <StackPanel Margin="20 0">
                         <Label Content="最近同步任务" FontSize="24" Margin="0 10"></Label>
-                        <ListBox Name="SyncHistoryListBox" Height="450" >
-                       
-                        </ListBox>
+                        <ListBox Name="SyncHistoryListBox" Height="450"></ListBox>
                     </StackPanel>
             </StackPanel>
             <StackPanel Grid.Column="1" Orientation="Vertical">
