--- a/SunSync/SunSync/SyncSettingPage.xaml
+++ b/SunSync/SunSync/SyncSettingPage.xaml
@@ -53,7 +53,7 @@
                                 </StackPanel>
                             </StackPanel>
                             <StackPanel>
-                                <CheckBox Name="CheckRemoteDuplicateCheckBox" Content="上传前检查空间同名文件" FontSize="16" Margin="0 10" VerticalAlignment="Center"></CheckBox>
+                                <CheckBox Name="CheckRemoteDuplicateCheckBox" Content="上传前检查空间同名文件" FontSize="16" Margin="0 10" VerticalContentAlignment="Center"></CheckBox>
                             </StackPanel>
                             <StackPanel>
                                 <TextBlock Name="SettingsErrorTextBlock" Text="" Margin="0 10" Foreground="Red"></TextBlock>
