--- a/SunSync/SunSync/AccountSettingPage.xaml
+++ b/SunSync/SunSync/AccountSettingPage.xaml
@@ -4,7 +4,7 @@
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       mc:Ignorable="d" 
-      d:DesignHeight="620" d:DesignWidth="700"
+      d:DesignHeight="670" d:DesignWidth="700"
 	Title="AccountSettingPage">
 
     <Grid>
@@ -27,7 +27,7 @@
             <Border BorderBrush="LightGray" BorderThickness="1">
                 <StackPanel Margin="10">
                     <StackPanel>
-                        <TextBlock 
+                        <TextBlock Margin="0 10"
                             FontSize="18" Foreground="OrangeRed" Height="50" TextWrapping="Wrap">
                             AK &amp; SK 是七牛用来进行API权限控制的一对密钥。
                             安全规范使用 AK &amp; SK 是保障数据安全的重要环节。
@@ -45,7 +45,7 @@
                              ></TextBox>
                     </StackPanel>
 
-                    <StackPanel Orientation="Horizontal">
+                    <StackPanel Orientation="Horizontal" Margin="0 5 0 0">
                         <TextBlock Name="SettingsErrorTextBlock" Text="" Margin="0 5" Foreground="Red" FontSize="14"></TextBlock>
                     </StackPanel>
 
@@ -66,7 +66,7 @@
                                 4. 出于安全考虑，建议您周期性地更换密钥。
                         </TextBlock>
                     </StackPanel>
-                    <Grid>
+                    <Grid Margin="0 10">
                         <Grid.ColumnDefinitions>
                             <ColumnDefinition Width="*"></ColumnDefinition>
                             <ColumnDefinition Width="*"></ColumnDefinition>
