--- a/SunSync/SunSync/App.xaml
+++ b/SunSync/SunSync/App.xaml
@@ -16,10 +16,10 @@
                         <Border BorderBrush="Gray" Name="Border" Padding="2" SnapsToDevicePixels="true">
                             <StackPanel Orientation="Vertical" Margin="5">
                                 <StackPanel>
-                                    <TextBlock Text="{Binding Path=SyncLocalDir}" FontSize="16" Foreground="Brown"></TextBlock>
+                                    <TextBlock Text="{Binding Path=Settings.LocalDirectory}" FontSize="16" Foreground="Brown"></TextBlock>
                                 </StackPanel>
                                 <StackPanel Orientation="Horizontal" Margin="0 5">
-                                    <TextBlock Text="{Binding Path=SyncTargetBucket}" FontSize="14" Foreground="SeaGreen"></TextBlock>
+                                    <TextBlock Text="{Binding Path=Settings.TargetBucket}" FontSize="14" Foreground="SeaGreen"></TextBlock>
                                     <TextBlock Text="{Binding Path=SyncDateTimeStr}" FontSize="14" Margin="10 0" FontStyle="Italic"></TextBlock>
                                 </StackPanel>
                             </StackPanel>
